# privmx-endpoint-kotlin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug-report.yaml
docs/styles/: font-manrope-auto.css  main.css  style.css
docs/templates/: base.ftl
docs/templates/includes/: header.ftl
examples/snippets/: .gitignore  build.gradle.kts
examples/snippets/src/commonMain/kotlin/Projects/PrivMXEndpoint/: Certificates.kt
examples/snippets/src/commonMain/kotlin/Stacks/Kotlin/: CustomFieldsAndQueries.kt  PolicyBuilders.kt  PrivMXEndpoint.kt  PrivMXEndpointJava.kt
examples/snippets/src/commonMain/kotlin/Stacks/Kotlin/events/: CustomEvents.kt  HandlingEvents.kt  Overview.kt
examples/snippets/src/commonMain/kotlin/Stacks/Kotlin/inboxes/: Entries.kt  Overview.kt
examples/snippets/src/commonMain/kotlin/Stacks/Kotlin/stores/: DownloadingFiles.kt  Files.kt  Overview.kt
examples/snippets/src/commonMain/kotlin/Stacks/Kotlin/threads/: Messages.kt  Overview.kt
examples/snippets/src/commonMain/kotlin/Tools/Stores/UsingStores/: DownloadingFiles.kt  ManagingFiles.kt  ManagingStores.kt  StoreEventsInRealTime.kt  UploadingFiles.kt
examples/snippets/src/commonMain/kotlin/Tools/Threads/UsingThreads/: ManagingThreads.kt  RealTimeCommunication.kt  SendingMessages.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
jni-wrapper/: build.gradle.kts
jni-wrapper/src/cpp/: CMakeLists.txt  exceptions.cpp  exceptions.h  jniUtils.cpp  jniUtils.h  model_native_initializers.cpp  model_native_initializers.h  parser.cpp  parser.h  utils.cpp  utils.hpp
jni-wrapper/src/cpp/libs/: .gitignore
jni-wrapper/src/cpp/modules/: BackendRequester.cpp  Connection.cpp  Connection.h  CryptoApi.cpp  EventApi.cpp  EventQueue.cpp  ExtKey.cpp  InboxApi.cpp  StoreApi.cpp  StoreApi.h  ThreadApi.cpp  ThreadApi.h  UserVerifierInterfaceJNI.cpp  UserVerifierInterfaceJNI.h  Utils.cpp
library-test/: .gitignore  build.gradle.kts
library-test/src/androidMain/: AndroidManifest.xml
library-test/src/androidMain/kotlin/: MainActivity.kt
library-test/src/commonMain/kotlin/: App.kt
library-test/src/iosMain/kotlin/: MainViewController.kt
privmx-endpoint/: README.md  build.gradle.kts
privmx-endpoint-extra/: README.md  build.gradle.kts
privmx-endpoint-extra/src/androidUnitTest/kotlin/: AndroidFibiTest.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/events/: EventDispatcher.kt  EventType.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/inboxEntryStream/: InboxEntryStream.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/inboxFileStream/: InboxFileStream.kt  InboxFileStreamReader.kt  InboxFileStreamWriter.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/lib/: BasicPrivmxEndpoint.kt  PrivmxEndpoint.kt  PrivmxEndpointContainer.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/model/: Modules.kt  SortOrder.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/policies/: ContainerPolicyComplexValue.kt  ContainerPolicyValue.kt  ContainerPolicyValues.kt  ItemPolicyComplexValue.kt  ItemPolicyValue.kt  ItemPolicyValues.kt  PolicyValue.kt  SpecialPolicyValue.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/java/privmx_endpoint_extra/storeFileStream/: StoreFileStream.kt  StoreFileStreamReader.kt  StoreFileStreamWriter.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/events/: EventDispatcher.kt  EventType.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/inboxEntryStream/: InboxEntryStream.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/inboxFileStream/: InboxFileStream.kt  InboxFileStreamReader.kt  InboxFileStreamWriter.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/lib/: BasicPrivmxEndpoint.kt  PrivmxEndpoint.kt  PrivmxEndpointContainer.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/model/: Modules.kt  SortOrder.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/policies/: ContainerPolicyComplexValue.kt  ContainerPolicyValue.kt  ContainerPolicyValues.kt  ItemPolicyComplexValue.kt  ItemPolicyValue.kt  ItemPolicyValues.kt  PolicyValue.kt  SpecialPolicyValue.kt
privmx-endpoint-extra/src/commonMain/kotlin/com/simplito/kotlin/privmx_endpoint_extra/storeFileStream/: StoreFileStream.kt  StoreFileStreamReader.kt  StoreFileStreamWriter.kt
privmx-endpoint-extra/src/commonTest/kotlin/: FibiTest.kt
privmx-endpoint-extra/src/jvmMain/kotlin/com/simplito/java/privmx_endpoint_extra/inboxEntryStream/: InboxEntryStream.jvm.kt
privmx-endpoint-extra/src/jvmMain/kotlin/com/simplito/java/privmx_endpoint_extra/inboxFileStream/: InboxFileStreamReader.jvm.kt  InboxFileStreamWriter.jvm.kt
privmx-endpoint/src/androidUnitTest/kotlin/: AndroidFibiTest.kt
privmx-endpoint/src/docs/styles/: font-jb-sans-auto.css  main.css  style.css
privmx-endpoint/src/jvmMain/kotlin/com/simplito/kotlin/privmx_endpoint/: LibLoader.kt
privmx-endpoint/src/nativeInterop/cinterop/: .gitignore  libprivmxendpoint.def  libprivmxendpointjvm.def
privmx-endpoint/src/nativeInterop/cinterop/libprivmx/include/: gmp.h
privmx-endpoint/src/nativeInterop/cinterop/libprivmx/include/Poco/Crypto/: Crypto.h
privmx-endpoint/src/nativeInterop/cinterop/libprivmx/include/Pson/: Type.hpp
privmx-endpoint/src/nativeInterop/cinterop/libprivmx/include/openssl/: asn1t.h  bio.h  cms.h  conf.h  configuration.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  x509.h  x509v3.h
privmx-endpoint/src/nativeInterop/cinterop/libprivmx/include/privmx/utils/: DebugConfig.hpp
(+130 files in other folders)
